# snx-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  KEY.gpg  README.md  i18n.md  index.html  llm-localization-prompt.txt  nixos.md  options.md  rustfmt.toml  snx-rs.repo  snx-rs.sources
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  pages.yml  release.yml  rust.yml
apps/snx-rs/: Cargo.toml
apps/snx-rs-gui/: Cargo.toml  build.rs
apps/snx-rs-gui/assets/: app.css  snx-rs-gui.manifest  snx-rs-gui.rc.in
apps/snx-rs-gui/assets/slint/: about.slint  all.slint  components.slint  prompt.slint  settings.slint  status.slint  tr.slint
apps/snx-rs-gui/src/: assets.rs  ipc.rs  main.rs  params.rs  platform.rs  profiles.rs  prompt.rs  settings.rs  status.rs  theme.rs  tray.rs  ui.rs  webkit.rs
apps/snx-rs-gui/src/platform/: linux.rs  macos.rs  tray_common.rs  windows.rs
apps/snx-rs-gui/src/platform/linux/: dbus.rs  theme.rs  tray.rs  webkit.rs
apps/snx-rs-gui/src/platform/macos/: theme.rs  tray.rs  webkit.rs
apps/snx-rs-gui/src/platform/windows/: theme.rs  tray.rs  webkit.rs
apps/snx-rs-gui/src/ui/: about.rs  prompt.rs  settings.rs  status.rs
apps/snx-rs/src/: cmdline.rs  main.rs  service.rs
apps/snxctl/: Cargo.toml
apps/snxctl/src/: main.rs
assets/: install.sh  package.sh  snx-rs-gui.desktop  snx-rs.conf  snx-rs.service
ci/: build.bash  clippy.bash  set_rust_version.bash  test.bash
crates/i18n/: Cargo.toml
crates/snxcore/: Cargo.toml
crates/snxcore/src/: browser.rs  ccc.rs  controller.rs  gateway.rs  lib.rs  model.rs  otp.rs  platform.rs  profiles.rs  prompt.rs  server.rs  server_info.rs  sexpr.rs  state.rs  tunnel.rs  util.rs
crates/snxcore/src/gateway/: ccc.rs
crates/snxcore/src/model/: params.rs  proto.rs  wrappers.rs
crates/snxcore/src/platform/: linux.rs  macos.rs  windows.rs
crates/snxcore/src/platform/linux/: keychain.rs  net.rs  resolver.rs  routing.rs  stats.rs  xfrm.rs
crates/snxcore/src/platform/macos/: command_socket.rs  ipsec_stub.rs  keychain.rs  machine_uuid.rs  net.rs  resolver.rs  routing.rs  single_instance.rs  stats.rs
crates/snxcore/src/platform/windows/: firewall.rs  ipsec_stub.rs  keychain.rs  machine_uuid.rs  net.rs  nrpt.rs  resolver.rs  routing.rs  single_instance.rs  stats.rs
crates/snxcore/src/sexpr/: de.rs  error.rs  ser.rs
crates/snxcore/src/tunnel/: connector.rs  device.rs  gateway.rs  ipsec.rs  ssl.rs
crates/snxcore/src/tunnel/ipsec/: connector.rs  keepalive.rs  natt.rs  scv.rs
crates/snxcore/src/tunnel/ipsec/imp/: native.rs  tcpt.rs  tun.rs  udp.rs
crates/snxcore/src/tunnel/ssl/: codec.rs  connector.rs  keepalive.rs
crates/snxcore/tests/: hello_reply.txt  test_server.rs
docs/: README.md  acknowledgements.md  additional-notes.md  advantages.md  building.md  certificates.md  command-line-usage.md  contributing.md  dns-configuration.md  docker.md  features.md  installation.md  license.md  mobile-access.md  nixos.md  options.md  persistent-ipsec-session.md  quick-start.md  system-requirements.md  translations.md  troubleshooting.md  tunnel-types.md  usage-examples.md
i18n/: Cargo.toml
i18n/assets/cs-CZ/: main.ftl
i18n/assets/da-DK/: main.ftl  snx-rs-gui.ftl
i18n/assets/de-DE/: main.ftl  snx-rs-gui.ftl
i18n/assets/en-US/: main.ftl
i18n/assets/es-ES/: main.ftl  snx-rs-gui.ftl
i18n/assets/fi-FI/: main.ftl
i18n/assets/fr-FR/: main.ftl
i18n/assets/it-IT/: main.ftl
i18n/assets/nl-NL/: main.ftl  snx-rs-gui.ftl
i18n/assets/no-NO/: main.ftl  snx-rs-gui.ftl
i18n/assets/pl-PL/: main.ftl
i18n/assets/pt-BR/: main.ftl
i18n/assets/pt-PT/: main.ftl
i18n/assets/ru-RU/: main.ftl
i18n/assets/sk-SK/: main.ftl  snx-rs-gui.ftl
i18n/assets/sv-SE/: main.ftl  snx-rs-gui.ftl
i18n/src/: lib.rs
package/: build-lto.sh  install.sh  package.sh  snx-rs.service
package/debian/: control.in  postinst  preinst  prerm
package/macos/: Info.plist  (+5 more)
scripts/: build-linux.sh  build-lto.sh  install.sh  package.sh
snx-rs/: Cargo.toml  build.rs
snx-rs-gui/: Cargo.toml  i18n.toml
snx-rs-gui/assets/: app.css
snx-rs-gui/assets/i18n/cs-CZ/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/da-DK/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/de-DE/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/en-US/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/es-ES/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/fi-FI/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/fr-FR/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/it-IT/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/nl-NL/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/no-NO/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/pl-PL/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/pt-PT/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/ru-RU/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/sk-SK/: snx-rs-gui.ftl
snx-rs-gui/assets/i18n/sv-SE/: snx-rs-gui.ftl
snx-rs-gui/src/: assets.rs  dbus.rs  i18n.rs  ipc.rs  main.rs  params.rs  prompt.rs  settings.rs  status.rs  theme.rs  tray.rs  tray_icon.rs  webkit.rs
snx-rs/src/: cmdline.rs  main.rs
snxcore/: Cargo.toml
snxcore/src/: browser.rs  ccc.rs  controller.rs  lib.rs  model.rs  otp.rs  platform.rs  prompt.rs  server.rs  server2.rs  server_info.rs  sexpr.pest  sexpr.rs  tunnel.rs  util.rs
snxcore/src/model/: params.rs  proto.rs  wrappers.rs
snxcore/src/platform/: linux.rs
snxcore/src/platform/linux/: net.rs  resolver.rs  routing.rs  xfrm.rs
snxcore/src/tunnel/: connector.rs  device.rs  ipsec.rs  ssl.rs
snxcore/src/tunnel/ipsec/: connector.rs  imp.rs  keepalive.rs  native.rs  natt.rs  tcpt.rs
snxcore/src/tunnel/ipsec/imp/: native.rs  tcpt.rs  tun.rs  udp.rs
snxcore/src/tunnel/ssl/: codec.rs  connector.rs  device.rs  keepalive.rs
snxcore/tests/: client_hello.txt
snxctl/: Cargo.toml
snxctl/src/: main.rs
src/: auth.rs  browser.rs  ccc.rs  codec.rs  controller.rs  device.rs  gui.rs  http.rs  ipsec.rs  lib.rs  main.rs  model.rs  net.rs  params.rs  platform.rs  prompt.rs  server.rs  server_info.rs  sexpr.pest  sexpr.rs  sexpr2.rs  tray_icon.rs  tun.rs  tunnel.rs  util.rs  xfrm.rs
tests/: client_hello.txt  client_request.txt  server_response.txt
(+86 files in other folders)
