[workspace]
members = ["snxcore", "snxctl", "snx-rs", "snx-rs-gui", "i18n"]
resolver = "2"

[workspace.package]
version = "4.7.0"
license = "AGPL-3.0"
edition = "2024"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Rust client for Checkpoint VPN tunnels"
readme = "README.md"
repository = "https://github.com/ancwrd1/snx-rs"
keywords = ["snx", "vpn", "ipsec"]
publish = false

[workspace.dependencies]
clap_complete ="4"

[profile.release]
panic = "abort"

[profile.lto]
inherits = "release"
strip = true
lto = true
codegen-units = 1
