[package]
name = "i18n"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
fluent-templates = "0.13"
sys-locale = "0.3"
cached = "0.55"
