[package]
name = "snx-rs-gui"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
snxcore = { path = "../snxcore" }
ksni = "0.3"
gtk4 = "0.9"
png = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
ipnet = {  version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures = "0.3"
libc = "0.2"
