[package]
name = "snx-rs-gui"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
snxcore = { path = "../snxcore" }
i18n = { path = "../i18n" }
ksni = "0.3"
gtk4 = "0.10"
png = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
once_cell = "1.8"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
clap_complete = { workspace = true }
hex = "0.4"
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures = "0.3"
libc = "0.2"
async-trait = "0.1"
interprocess = { version = "2", features = ["tokio"] }
bytes = "1"
async-channel = "2"
