[package]
name = "snx-rs"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
snxcore = { path = "../snxcore" }
anyhow = "1.0.81"
futures = "0.3.30"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
libc = "0.2"
tracing-subscriber = "0.3"
clap = { version = "4.5.4", features = ["derive"] }
ipnet = {  version = "2", features = ["serde"] }
