[package]
name = "snxcore"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
pest = "2"
pest_derive = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-native-tls = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "process", "signal"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["native-tls"] }
futures = "0.3"
bytes = "1"
hex = "0.4"
tun = { version = "0.6", features = ["async"] }
ipnet = {  version = "2", features = ["serde"] }
libc = "0.2"
base64 = "0.22"
tracing = { version = "0.1", features = [] }
async-trait = "0.1"
async-recursion = "1"
rand = "0.8"
directories-next = "2"
chrono = { version = "0.4", features = ["serde"] }
passterm = "2"
enum-as-inner = "0.6"
num-traits = "0.2"
parse_int = "0.6"
parking_lot = "0.12"
byteorder = "1"
regex = "1"
once_cell = "1"
nix = { version = "0.28", features = ["fs", "user"] }
zbus = { version = "4.2", default-features = false, features = ["tokio"] }
secret-service = {  version = "3", features = ["rt-tokio-crypto-rust"] }
