[package]
name = "snxctl"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
snxcore = { path = "../snxcore" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
