[package]
name = "snx-rs-gui"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
snxcore = { path = "../../crates/snxcore" }
i18n = { path = "../../crates/i18n" }
secrecy = "0.10"
ksni = "0.3"
gtk4 = { version = "0.10", features = ["v4_10"] }
png = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
clap_complete = { workspace = true }
hex = "0.4"
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures = "0.3"
libc = "0.2"
async-trait = "0.1"
interprocess = { version = "2", features = ["tokio"] }
bytes = "1"
async-channel = "2"
itertools = "0.14"
uuid = { version = "1.18.1", features = ["v4"] }
webkit6 = { version = "0.5", optional = true }

[features]
mobile-access = ["dep:webkit6"]
