[package]
name = "snx-rs"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
snxcore = { path = "../../crates/snxcore" }
i18n = { path = "../../crates/i18n" }
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
libc = "0.2"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
clap_complete = { workspace = true }
ipnet = {  version = "2", features = ["serde"] }
secrecy = "0.10"
