[package]
name = "snxcore"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
isakmp = { git = "https://github.com/ancwrd1/isakmp.git" }
i18n = { path = "../i18n" }

pest = "2"
pest_derive = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10"
tokio-native-tls = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "process", "signal", "macros"] }
tokio-util = { version = "0.7", features = ["net"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
futures = "0.3"
bytes = "1"
hex = "0.4"
tun = { version = "0.8", features = ["async"] }
ipnet = {  version = "2", features = ["serde"] }
libc = "0.2"
base64 = "0.22"
tracing = { version = "0.1", features = [] }
async-trait = "0.1"
async-recursion = "1"
rand = "0.9"
directories-next = "2"
chrono = { version = "0.4", features = ["serde"] }
passterm = "2"
enum-as-inner = "0.6"
num-traits = "0.2"
parse_int = "0.9"
byteorder = "1"
nix = { version = "0.30", features = ["fs", "user"] }
uuid = { version = "1", features = ["v4", "v5"] }
opener = { version = "0.8"}
cached = {  version = "0.56",  features = ["async"] }
openssl-sys = "0.9"
openssl = "0.10"
itertools = "0.14"
interprocess = { version = "2", features = ["tokio"] }
hyper = { version = "1", default-features = false, features = ["server", "http1"] }
hyper-util = "0.1"
http-body-util = "0.1"
rusqlite = { version = "0.38" , features = ["uuid"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
secret-service = {  version = "5", features = ["rt-tokio-crypto-rust"] }

[dev-dependencies]
tempfile = "3"

[features]
vendored-openssl = ["openssl/vendored"]
vendored-sqlite = ["rusqlite/bundled"]
